# Law-Assistant

./: .gitattributes  .gitignore  README-CODEX-SYSTEM-AUDIT-PROMPT.md  README.md
QnA_crawler/: .env.example  README.md  docker-compose.yml  pyproject.toml
QnA_crawler/sql/: schema.sql
QnA_crawler/src/qna_crawler/: __init__.py  cli.py  config.py  crawler.py  db.py  exporter.py  models.py  retrieval_audit.py
QnA_crawler/src/vn_law_qna_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
QnA_crawler/tests/: test_government_qna.py
UI_test/: README.md  app.py  requirements.txt
UI_test/static/: app.js  document.html  document.js  index.html  styles.css
UI_test/tests/: test_app_security.py
data_usable/: README.md
data_usable/audit/: bad_documents.csv  data_quality_report.json
data_usable/current/: content.parquet  metadata.parquet  (+1 more)
dataset/: README.md
dataset/vietnamese_legal_documents/creation/crawler/: .env.example  README.md  docker-compose.yml  pyproject.toml
dataset/vietnamese_legal_documents/creation/crawler/scripts/: preview_dataset.py  resolve_tvpl_fallbacks.py  validate_export.py
dataset/vietnamese_legal_documents/creation/crawler/sql/: schema.sql
dataset/vietnamese_legal_documents/creation/crawler/src/law_crawler/: __init__.py  audit.py  cli.py  config.py  db.py  discovery.py  exporter.py  fetcher.py  models.py  parser.py  pdf_ocr.py  quality.py  repository.py  site_crawler.py
dataset/vietnamese_legal_documents/creation/crawler/tests/: test_audit.py  test_discovery.py  test_fetcher.py  test_parser.py  test_pdf_ocr.py  test_repository.py  test_site_crawler.py
docs/: rag-demo-conversations.md
law-service/: README.md  docker-compose.yml  pom.xml
rag-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rag-service/app/rag_service/: baochinhphu_dataset.py  bm25_retriever.py  chunking.py  citation_verifier.py  config.py  dependencies.py  download_embedding_model.py  embedding.py  evaluation.py  evaluation_dataset.py  filters.py  hybrid_retriever.py  index_audit.py  indexing.py  law_client.py  llm.py  main.py  models.py  observability.py  pipeline.py  prompting.py  qna_dataset.py  rabbit_bridge.py  reranking.py  retrieval.py  source_policy.py  vector_store.py  worker.py
rag-service/app/rag_service/static/: documents.html
rag-service/evaluation/: rag_test_set.json
rag-service/scripts/: redis_queue_eta.sh  requeue_missing_documents.py
rag-service/tests/: test_baochinhphu_dataset.py  test_chunking.py  test_citation_verifier.py  test_document_ui.py  test_embedding_event.py  test_embedding_model.py  test_evaluation.py  test_hybrid_retriever.py  test_index_audit.py  test_indexing.py  test_pipeline.py  test_prompting.py  test_qna_dataset.py  test_rabbit_bridge.py  test_reranking.py  test_source_policy.py  test_vector_store.py  test_worker.py
scripts/: extract_current_new_content.py  prepare_law_assistant_dataset.py
(+54 files in other folders)
