[project]
name = "vn-law-qna-crawler"
version = "0.1.0"
description = "Government Q&A crawler for Law Assistant benchmark and fine-tuning datasets."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "mysql-connector-python>=8.4.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vn-law-qna-crawler = "qna_crawler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
