[project]
name = "law-assistant-rag-service"
version = "0.1.0"
description = "Python-first RAG service for the Law Assistant platform."
requires-python = ">=3.11,<3.14"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "celery>=5.4,<6",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "langfuse>=2.60,<3",
    "llama-index>=0.12,<0.13",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-instrumentation-fastapi>=0.50b0,<1",
    "opentelemetry-sdk>=1.29,<2",
    "pandas>=2.2,<3",
    "pika>=1.3,<2",
    "pyarrow>=16,<23",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "qdrant-client>=1.12,<1.13",
    "redis>=5,<6",
    "scrapy>=2.13,<3",
    "sentence-transformers>=5.4,<6",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "respx>=0.22,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/rag_service"]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
