[project]
name = "vn-law-crawler"
version = "0.1.0"
description = "Vietnamese legal document crawler with structured article/clause/point persistence."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "mysql-connector-python>=8.4.0",
    "pyarrow>=15.0.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
ocr = [
    "numpy>=1.24.0",
    "paddleocr>=2.7.0; python_version < '3.13'",
    "paddlepaddle>=2.6.0; python_version < '3.13'",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0; python_version < '3.13'",
    "pillow>=12.0.0; python_version >= '3.13'",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "vietocr>=0.3.13; python_version < '3.13'",
]
tesseract-ocr = [
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
vn-law-crawler = "law_crawler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
